--- a/app/src/main/res/layout/create_task_layout.xml
+++ b/app/src/main/res/layout/create_task_layout.xml
@@ -5,25 +5,30 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
-    <EditText
-        android:id="@+id/taskTitleInput"
+    <com.google.android.material.textfield.TextInputEditText
+        android:id="@+id/taskName"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:ems="10"
-        android:text=""
-        android:hint="Enter task title"
-        android:inputType="textPersonName"
+        android:layout_marginStart="15dp"
+        android:layout_marginTop="15dp"
+        android:layout_marginEnd="15dp"
+        android:hint="Enter task"
+        android:minHeight="48dp"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <EditText
-        android:id="@+id/taskDescriptionInput"
+    <com.google.android.material.textfield.TextInputEditText
+        android:id="@+id/taskDescription"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:ems="10"
-        android:text=""
-        android:inputType="textPersonName"
+        android:layout_marginStart="15dp"
+        android:layout_marginTop="15dp"
+        android:layout_marginEnd="15dp"
         android:hint="Enter task description"
+        android:minHeight="48dp"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/taskTitleInput" />
+        app:layout_constraintTop_toBottomOf="@+id/taskName" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
